GNOME Bugzilla – Bug 750675
qtdemux: reverse playback not working
Last modified: 2015-06-10 08:41:29 UTC
Due to added condition of segment->start = desired_offset in do_seek, reverse playback does not work anymore. In case of reverse playback instead of start, stop should be updated.
Created attachment 304907 [details] [review] fix reverse playback
(In reply to Vineeth from comment #0) > Due to added condition of > segment->start = desired_offset > in do_seek, reverse playback does not work anymore. That code is pushed on https://bugzilla.gnome.org/show_bug.cgi?id=746822 I tested vineeth's patch with gst-rtsp-server, and I confirmed this patch doesn't affect the issue at all.
commit 720ff75c72b7866007cc9a166993b3c76639913e Author: Vineeth TM <vineeth.tm@samsung.com> Date: Wed Jun 10 09:49:47 2015 +0900 qtdemux: fix reverse playback When performing seek, segment->start is being updated with desired_offset, but in case of reverse playback segment->start should be 0 and segment->stop should be updated with desired offset. https://bugzilla.gnome.org/show_bug.cgi?id=750675